[package]
name = "rustovuli"
version = "0.1.0"
authors = ["Kevin Nguyen <kevin.tuanhuy.nguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
date_time = "2.1.1"
colored = "2.0.0"
billboard = "0.1.0"
dialoguer = "0.8.0"
regex = "1"
