[package]
name = "rovuli"
version = "0.1.0"
authors = ["Kevin Nguyen <kevin.tuanhuy.nguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
billboard = "0.1.0"
dialoguer = "0.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
